@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    # shootNum:int
    # power:int
    # bulletSpeed:int
    # direction:int
    # shootStrategy:ShootStrategy
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + increaseHp(int increase):void
    + decreaseHp(int decrease):void
    + getHp():int
    + getShootNum():int
    + setShootNum(int shootNum):void
    + getPower():int
    + setPower(int power):void
    + getBulletSpeed():int
    + setBulletSpeed(int bulletSpeed):void
    + getDirection():int
    + setDirection(int direction):void
    + setShootStrategy(ShootStrategy shootStrategy):void
    + shoot():List<BaseBullet>
 }


class HeroAircraft {
    - {static} instance:HeroAircraft
    - propDuration:long
    - propEffectiveEndTime:long
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + {static} getInstance(int locationX, int locationY, int speedX, int speedY, int hp):HeroAircraft
    + forward():void
}

Client --> HeroAircraft : getInstance()
HeroAircraft <-- HeroAircraft : -instance

class Enemy {
    - score:int
    # propCreator:PropCreator
    + Enemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + getScore():int
    + setScore(int score):void
    + dropProp(List<BaseProp> props, int locationX, int locationY):void
    + update(BaseProp prop):void
}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + dropProp(List<BaseProp> props, int locationX, int locationY):void
}

class EliteEnemy {
    - propRate:double
    - {static} propRate:double
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + dropProp(List<BaseProp> props, int locationX, int locationY):void
    + getPropRate():double
    + update(BaseProp prop):void
}

class ElitePlusEnemy {
    - propRate:double
    + ElitePlusEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + dropProp(List<BaseProp> props, int locationX, int locationY):void
    + update(BaseProp prop):void
}

class BossEnemy {
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + dropProp(List<BaseProp> props, int locationX, int locationY):void
    + update(BaseProp prop):void
}

Enemy <|-- MobEnemy
Enemy <|-- EliteEnemy
Enemy <|-- ElitePlusEnemy
Enemy <|-- BossEnemy

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- Enemy

abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

class BaseProp {
    + BaseProp(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + takeEffect(HeroAircraft heroAircraft):void
}

class BloodProp {
    - healingHP:int
    + BloodProp(int locationX, int locationY, int speedX, int speedY, int healingHP)
    + getHealingHP():int
    - heal(HeroAircraft heroAircraft):void
    + takeEffect(HeroAircraft heroAircraft):void
}

class BombProp {
    + BombProp(int locationX, int locationY, int speedX, int speedY, int healingHP)
    - boom(HeroAircraft heroAircraft):void
    + getDamage():int
    + setDamage(int damage):void
    + takeEffect(HeroAircraft heroAircraft):void
}

class BulletProp {
    + BulletProp(int locationX, int locationY, int speedX, int speedY, int healingHP)
    - fireSupply(HeroAircraft heroAircraft):void
    + takeEffect(HeroAircraft heroAircraft):void
}

class BulletPlusProp {
    + BulletPlusProp(int locationX, int locationY, int speedX, int speedY)
    - firePlusSupply(HeroAircraft heroAircraft):void
    + takeEffect(HeroAircraft heroAircraft):void
}

BaseProp <|-- BloodProp
BaseProp <|-- BombProp
BaseProp <|-- BulletProp
BaseProp <|-- BulletPlusProp

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- BaseProp

interface EnemyCreator {
    + createEnemy():Enemy
}

class MobEnemyCreator {
    - speedX:int
    - speedY:int
    - hp:int
    + createEnemy():Enemy
}

MobEnemy <.. MobEnemyCreator

class EliteEnemyCreator {
    - speedX:int
    - speedY:int
    - hp:int
    + createEnemy():Enemy
}

EliteEnemy <.. EliteEnemyCreator

class ElitePlusEnemyCreator {
    - speedX:int
    - speedY:int
    - hp:int
    + createEnemy():Enemy
}

ElitePlusEnemy <.. ElitePlusEnemyCreator

class BossEnemyCreator {
    - speedX:int
    - speedY:int
    - hp:int
    + createEnemy():Enemy
}

BossEnemy <.. BossEnemyCreator

EnemyCreator <|.. MobEnemyCreator
EnemyCreator <|.. EliteEnemyCreator
EnemyCreator <|.. ElitePlusEnemyCreator
EnemyCreator <|.. BossEnemyCreator

interface PropCreator {
    + createProp(int locationX, int locationY):BaseProp
}

class BloodPropCreator {
    - speedX:int
    - speedY:int
    + createProp(int locationX, int locationY):BloodProp
}

BloodProp <.. BloodPropCreator

class BombPropCreator {
    - speedX:int
    - speedY:int
    + createProp(int locationX, int locationY):BombProp
}

BombProp <.. BombPropCreator

class BulletPropCreator {
    - speedX:int
    - speedY:int
    + createProp(int locationX, int locationY):BulletProp
}

BulletProp <.. BulletPropCreator

class BulletPlusPropCreator {
    - speedX:int
    - speedY:int
    + createProp(int locationX, int locationY):BulletPlusProp
}

BulletPlusPropCreator <.. BulletPlusPropCreator

PropCreator <|.. BloodPropCreator
PropCreator <|.. BombPropCreator
PropCreator <|.. BulletPropCreator
PropCreator <|.. BulletPlusPropCreator

@enduml